demo/kong/test_auth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-auth
  namespace: lab-demo
  labels:
    app: test-auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-auth
  template:
    metadata:
      labels:
        app: test-auth
    spec:
      imagePullSecrets:
      - name: registry-secret
      containers:
      - name: test-auth
        image: reg.fptcompute.com.vn/portal-new/helloworld:0.1
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: test-auth-service
  namespace: lab-demo
  labels:
    app: test-auth
spec:
  ports:
  - port: 8080
    name: http
    targetPort: 8080
  selector:
    app: test-auth
