demo/kong/test_lb.yaml
kind: Pod
apiVersion: v1
metadata:
  name: apple-app
  namespace: lab-demo
  labels:
    app: apple
spec:
  containers:
    - name: apple-app
      image: hashicorp/http-echo
      args:
        - "-text=Hello KhanhCT"
---
kind: Service
apiVersion: v1
metadata:
  name: lb-service
  namespace: lab-demo
spec:
  selector:
    app: apple
  ports:
    - port: 5678 # Default port for image
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:    
  name: hellolb.prod.khanhct.com 
  namespace: lab-demo
spec:
  ingressClassName: nginx
  rules:
  - host: hellolb.prod.khanhct.com 
    http:
      paths:
      - backend:
          service:
            name: lb-service
            port:
              number: 5678
        path: /
        pathType: Prefix
