demo/kong/test_nsf.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: hello-nfs
  namespace: lab-demo
  labels:
    app: nfs-example
spec:
  imagePullSecrets:
  - name: registry-secret
  containers:
    - name: helloworld
      image: reg.fptcompute.com.vn/portal-new/helloworld:0.1
      imagePullPolicy: Always
      ports:
        - containerPort: 8080
      volumeMounts:
      - mountPath: "/usr/src/app/documents"
        name: "nfs-pv"
  volumes:
  - name: "nfs-pv"
    persistentVolumeClaim:
      claimName: "nfs-pv-claim"
---
apiVersion: v1
kind: Service
metadata:
  name: nfs-service
  namespace: lab-demo
spec:
  type: LoadBalancer
  selector:
    app: nfs-example
  ports:
  - port: 8081
    targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:    
  name: nfs.prod.khanhct.com 
  namespace: lab-demo
spec:
  ingressClassName: nginx
  rules:
  - host: nfs.prod.khanhct.com 
    http:
      paths:
      - backend:
          service:
            name: nfs-service
            port:
              number: 8081
        path: /
        pathType: Prefix
